--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h2>Bachelor of Arts: Graphics design</h2>
         <h2>University For Creative Careers</h2>
         <h2>savannah,Ga</h2>
-        <hr color="Black"
+        <hr color="Blue"
         <hr color="Black">
         <h1>Hobbies</h1>
         <h2>Cricket</h2>
