--- a/Ticket_boking_ui.html
+++ b/Ticket_boking_ui.html
@@ -3,119 +3,112 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>🎢 Ride Booking</title>
+  <title>Ticket Booking</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #e0f7fa, #ffffff);
+    body, html {
+      height: 100%;
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
+      font-family: Arial, sans-serif;
     }
 
-    h2 {
-      text-align: center;
-      color: #00796b;
-    }
-
-    form {
-      max-width: 500px;
-      margin: 2rem auto;
-      padding: 2rem;
-      background-color: #ffffff;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    }
-
-    label {
-      display: block;
-      font-weight: 600;
-      margin-bottom: 0.3rem;
-      color: #004d40;
-    }
-
-    input, select {
+    #video-container {
+      position: relative;
+      height: 100vh;
       width: 100%;
-      padding: 0.6rem;
-      margin-bottom: 1rem;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      font-size: 1rem;
-      background-color: #f1f8e9;
+      overflow: hidden;
     }
 
-    input:focus, select:focus {
-      outline: none;
-      border-color: #26a69a;
-      box-shadow: 0 0 4px rgba(38, 166, 154, 0.5);
-    }
-
-    button {
-      width: 100%;
-      padding: 0.8rem;
-      background-color: #26a69a;
-      color: white;
-      font-size: 1rem;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-   video{
-    height: 100%;
-    width:100%;
-    object-fit: cover;
-    position: fixed;
-   }
-   .main-video{
-    position: relative;
-    height: 100%;
-    width: 100%;
-   }
-    button:hover {
-      background-color: #00796b;
-    }
-    .form-card{
+    #video-container video {
       position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      z-index: -1;
+    }
+     
+    .centered-nav {
+      position: absolute;
+      background-color: transparent;
+      color: yellow;
+      padding: 15px 30px;
+      border-radius: 10px;
+      font-size: 1.2rem;
+      font-weight: bold;
+      z-index: 10;
+    }
 
+    .centered-nav a {
+      color: yellowgreen;
+      text-decoration: none;
+      margin: 0 15px;
+      transition: color 0.3s;
+    }
+
+    .centered-nav a:hover {
+      color: #ffc107;
+    }
+.form-overlay {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(255, 255, 255, 0.95); 
+  padding: 30px;
+  border-radius: 15px;
+  width: 90%;
+  max-width: 700px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+}
+
+    h1 {
+      text-align: center;
+      margin-bottom: 25px;
     }
   </style>
 </head>
-<body >
-   
-  <h2>🎟️ Book Your Ride</h2>
-  <form action="#" method="post">
-   <div class="main-video"> 
-    <video autoplay muted loop id="bg-video">
-    <source src="website-desktop-landing.mp4">
+  <body>
+
+  <div id="video-container">
+    <video autoplay muted loop>
+      <source src="website-desktop-landing.mp4" type="video/mp4" />
     </video>
-    <div class="form-card">
-    <div>
-      <label for="visitorId">Visitor ID:</label>
-      <input type="number" id="visitorId" name="visitorId" placeholder="Enter visitor ID" required />
-    </div>
-    <div>
-      <label for="rideId">Select Ride:</label>
-      <select id="rideId" name="rideId" required>
-        <option value="">-- Choose a Ride --</option>
-        <option value="1">🎢 Roller Coaster</option>
-        <option value="2">🎡 Ferris Wheel</option>
-        <option value="3">💦 Water Slide</option>
-        <option value="4">👻 Haunted House</option>
-      </select>
-    </div>
-    <div>
-      <label for="rideDate">Date:</label>
-      <input type="date" id="rideDate" name="rideDate" required />
-    </div>
-    <div>
-      <label for="rideTime">Time:</label>
-      <input type="time" id="rideTime" name="rideTime" required />
+      <div class="centered-nav">
+      <a href="#">ABOUT</a>
+      <a href="#">HOME</a>
+      <a href="#">CONTACT</a>
+      <a href="#">EMAIL</a>
     </div>
 
-    <button type="submit">Book Ride ✅</button>
-  </div>
-  </div>
-  </form>
+    <div class="form-overlay">
+      <h1>Ticket Booking</h1>
+      <form class="row">
+        <div class="col-md-6">
+          <label for="visitorId" class="form-label">Visitor Id</label>
+          <input type="text" class="form-control mb-3" id="visitorId" placeholder="Enter Visitor ID">
+        </div>
+        <div class="col-md-6">
+          <label for="rideSelect" class="form-label">Ride</label>
+          <select class="form-select mb-3" id="rideSelect">
+            <option selected disabled>Choose Ride</option>
+            <option value="1">🎢Roller Coaster</option>
+            <option value="2">🎡 Ferris Wheel</option>
+            <option value="3">👻 Haunted House</option>
+          </select>
+        </div>
+        <div class="col-md-6">
+          <label for="rideDate" class="form-label">Date</label>
+          <input type="date" class="form-control mb-3" id="rideDate">
+        </div>
+        <div class="col-md-6">
+          <label for="rideTime" class="form-label">Time</label>
+          <input type="time" class="form-control mb-3" id="rideTime">
+        </div>
+        <div
+      </form>
+      <body
 
-</body>
-</html>
