--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 <body bgcolor="violet" text="">
     <header>
         <h1> Resume </h1>
-        <hr color="Black" >
+        <hr color="Blue" >
     </header>  
     <main>
         <font color="#ffffff" text=""> 
         <h1>Name</h1>
         <h2>Akash Dubey</h2>
-        <hr color="Black">
+        <hr color="Blue">
         <h1> Contact </h1>
         <h2>Esser,Md212212</h2>
         <h2>Mobile No 5553-353-35</h2>
@@ -23,21 +23,21 @@
         <h2>C</h2>
         <h2>c++</h2>
         <h2>Java</h2>
-        <hr color="Black">
+        <hr color="Blue">
         <h1>Education</h1>
         <h2>May 2017</h2>
         <h2>Bachelor of Arts: Graphics design</h2>
         <h2>University For Creative Careers</h2>
         <h2>savannah,Ga</h2>
         <hr color="Blue"
-        <hr color="Black">
+        <hr color="Blue">
         <h1>Hobbies</h1>
         <h2>Cricket</h2>
         <h2>Football</h2>
         <h2>Carrom</h2>
         </font>
     </main>
-    <hr color="Black">
+    <hr color="Blue">
     <footer>
         &copy;ashu291@gmail.com
     </footer>
