--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h2>Esser,Md212212</h2>
         <h2>Mobile No 5553-353-35</h2>
         <h2>ash29@gmail.com</h2>
-        <hr color="Black">
+        <hr color="Blue">
         <h1>Skills</h1>
         <h2>C</h2>
         <h2>c++</h2>
